--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 	</head>
 	<body>
+		<main>
+			<div class="container">
+				<div id="numbers-container"></div>
+			</div>
+		</main>
 
 
 		<script type="" src="./js/script.js"></script>
