--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Simon</title>
-
-		<!--css-->
-		<link rel="stylesheet" type="" href="./css/style.css">
-
-	</head>
-	<body>
-		<main>
-			<div class="container">
-				<div id="numbers-container"></div>
-			</div>
-		</main>
-
-
-		<script type="" src="./js/script.js"></script>
-
-	</body>
-</html> 
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simon</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    
+    <div id="game-container">
+        <h1>Gioco di Memoria</h1>
+        <div id="numbers-display"></div>
+        <div id="timer"></div>
+        <div id="guess-section">
+            <input type="number" id="guess-input" placeholder="Inserisci un numero">
+            <button id="submit-guess">Invia</button>
+        </div>
+        <div id="result"></div>
+    </div>
+    <script src="js/script.js"></script>
+</body>
+</html>
